# JBASIC

./: .clangd  App.cpp  Basic.g4  BasicCasting.cpp  BasicCasting.h  BasicVisitorImpl.cpp  BasicVisitorImpl.h  CMakeLists.txt  README.md
cmake/: ExternalAntlr4Cpp.cmake
testScripts/: calculator.jbas  test.jbas
